# QMineSweeper

./: .gitignore  CLAUDE.md  CMakeLists.txt  CYCLES.md  DECISIONS.md  QMineSweeper_tr_TR.ts  README.md  average_time_format.h  bv_per_second_format.h  flag_accuracy_format.h  language.cpp  language.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  minebutton.cpp  minebutton.h  minefield.cpp  minefield.h  resources.qrc  safe_percent_format.h  smiley.h  stats.cpp  stats.h  telemetry.cpp  telemetry.h  time_format.h  tutorial.cpp  tutorial.h
.github/workflows/: formatter.yml  macos.yml  release.yml  ubuntu.yml  windows.yml
icons/: QMineSweeper.icns  make_icon.py
icons/flags/: fetch_flags.sh
tests/: CMakeLists.txt  tst_average_time_format.cpp  tst_bv_per_second_format.cpp  tst_flag_accuracy_format.cpp  tst_minebutton.cpp  tst_minefield.cpp  tst_safe_percent_format.cpp  tst_smiley.cpp  tst_stats.cpp  tst_time_format.cpp  tst_tutorial.cpp
translations/: QMineSweeper_ar_SA.ts  QMineSweeper_de_DE.ts  QMineSweeper_en.ts  QMineSweeper_es_ES.ts  QMineSweeper_fr_FR.ts  QMineSweeper_hi_IN.ts  QMineSweeper_pt_BR.ts  QMineSweeper_ru_RU.ts  QMineSweeper_tr_TR.ts  QMineSweeper_zh_CN.ts  apply_translations.py
